with the scrollbar issue in template select 30/12/2024 12:12 PM

--- a/force-app/main/default/lwc/templatePreview/templatePreview.css
+++ b/force-app/main/default/lwc/templatePreview/templatePreview.css
@@ -6,9 +6,11 @@
     display: flex;
     align-items: start;
     justify-content: center;
-    height: 100%;
+    max-height: 20rem;
     width: 100%;
+    overflow-y: scroll;
     flex-direction: column;
+    overflow-wrap: break-word;
 }
 
 .template-section-div {
